update - weird spacing issues mostly fixed except in /courts

--- a/capstone/static/css/scss/floating-labels.scss
+++ b/capstone/static/css/scss/floating-labels.scss
@@ -19,6 +19,9 @@
   color: #4C4C4C;
   cursor: text;
   transition: all .1s ease-in-out;
+  @include media-breakpoint-up(lg) {
+    font-size: 0.8em;
+  }
 }
 
 .form-label-group input::-webkit-input-placeholder {
